@@ -1,0 +1,40 @@
+name: Test Action
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+env:
+  MOD_NAME: community-maps-2
+
+jobs:
+  build-pyromod:
+    runs-on: ubuntu-latest
+    env:
+      MOD_VERSION: ${{ github.sha }}
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        submodules: true
+    - uses:  0ad-matters/gh-action-build-pyromod@v1
+      with:
+        name: ${{ env.MOD_NAME }}
+        version: ${{ env.MOD_VERSION }}
+        directory: 'test/${{ env.MOD_NAME }}'
+      id: build-pyromod
+    - uses:  0ad-matters/gh-action-build-pyromod@trunk
+      with:
+        name: ${{ env.MOD_NAME }}
+        version: ${{ env.MOD_VERSION }}
+        directory: 'test/${{ env.MOD_NAME }}'
+      id: build-pyromod
+    #- name: Upload Artifacts
+      ## Uploads artifacts (combined into a zip file) to the workflow output page
+      #uses: actions/upload-artifact@v3
+      #with:
+        #name: ${{ env.MOD_NAME }}-${{ env.MOD_VERSION }}
+        #path: "output/${{ env.MOD_NAME }}*.*"
